Added Liquibase to project. Added changelog files

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -14,4 +14,7 @@ spring:
     properties:
       hibernate:
         dialect: org.hibernate.dialect.PostgreSQLDialect
+  liquibase:
+    enabled: true
+    change-log: classpath:/db/changelog/changelog-master.xml
 
